# subtitle-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  subtitle_lab.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: ROADMAP.md  USAGE.md
examples/: sample.srt
tests/: test_subtitle_lab.py
