[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-lab"
version = "0.1.0"
description = "Local-first subtitle cleaning, conversion, and sync tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "subtitle-lab maintainers" }]
keywords = ["subtitle", "srt", "vtt", "captions", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
  "Topic :: Text Processing",
]

[project.scripts]
subtitle-lab = "subtitle_lab:main"
